Fix background color on the serial graph. This works okay as neutral2 but the little numbers on the right aren't themed to contrast in dark theme, and I was struggling to get them working. So just hard-code for now.

--- a/theme/serial.less
+++ b/theme/serial.less
@@ -202,9 +202,11 @@
 #serialPlaceholder {
     padding: 0.4rem;
     height: 12rem;
-    background-color: var(--pxt-target-background2);
-    color: var(--pxt-target-foreground2);
-    border: 1px solid var(--pxt-target-stencil2);
+    border: 1px solid var(--pxt-neutral-stencil2);
+
+    /* Background and foreground hard-coded until foreground number colors are theme-able */
+    background-color: #d9d9d9;
+    color: #000000;
 }
 
 #serialCharts canvas {
